# i_alfred_workflow

./: .gitignore  .pdm.toml  .tasks  1223fdfe324324  CMakeLists.txt  Makefile  app.sh  index.py  info.plist  lua_pac_install.sh  package.json  pnpm-lock.yaml  pyproject.toml  test.sh  testapi.sh  tsconfig.json
.nlsp-settings/: sumneko_lua.json
c/: CMakeLists.txt  main.cpp
core/: alfy.lua  init.lua
data/: ssh.json  temp.json
go/: CMakeLists.txt  Makefile  app.sh  go.mod  go.sum
go/cmd/i-alfred-workflow/: main.go  npm_search.go
go/internal/conf/: alfy.pb.go  alfy.proto  gitlab.pb.go  gitlab.proto  mvn.pb.go  mvn.proto  mvn_old.pb.go  mvn_old.proto  npm.pb.go  npm.proto  npm_old.pb.go
go/internal/server/: alfy.go
go/internal/service/action/: ssh.go
go/internal/service/search/: gitlab.go  mvn.go  mvn_old.go  mvn_packages.go  npm.go
javascript/: CMakeLists.txt  app.sh  index.d.ts  index.ts  main.ts  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
javascript/mvn_package_version/: index.ts
javascript/mvn_search/: index.ts  info.plist
javascript/npm_search/: index.py  index.ts
javascript/ssh/: index.ts
lua/: .luacheckrc  .tasks  CMakeLists.txt  app.sh  lua_pac_install.sh  main.lua  mvn_search.lua  run.sh  ssh_action.lua
lua/lualib/core/: alfy.lua  inspect.lua
lua/src/: mvn_package_version.lua  mvn_search.lua  npm_search.lua  ssh.lua
mvn_search/: index.py
npm_search/: index.js  npm.lua
python/: index.py  index.spec  pyproject.toml
python/mvn_search/: index.py
script/: install.py  plist_handle.py  ssh.js  ssh.sh  template_default.exp  template_default.sh  test.sh  update_plist.py
src/: index.ts  mvn_search.lua  npm_search.lua  ssh.lua  ssh_action.lua  test.lua
src/git-repo/lib/data_source/: repositories.rb
src/git-repo/lib/entities/: repository.rb
