[project]
name = ""
version = ""
description = ""
authors = [
    {name = "shooterfei", email = "shooterfei@163.com"},
]
dependencies = [
    "requests>=2.27.1",
    "pyinstaller>=4.5.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pyright]
extraPaths = "__pypackages__/3.10/lib"
